--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<style media="screen">
 			body {
 				margin: 0;
-				border: 10px solid #192b36;
 			}
 			img {
 				max-width: 100%;
@@ -13,8 +12,6 @@
 		</style>
 	</head>
 	<body>
-		<img src="header.jpg" alt="">
-		<img src="hero.jpg" alt="">
-		<img src="acustica.jpg" alt="">
+		<img src="nueva-version.jpg" alt="">
 	</body>
 </html>
